--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <base href="/meu-repositorio/"> 
+    <title>login</title>
+    <base href="/meu-repositorio"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
@@ -101,7 +101,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h1>Login</h1>
+        <h1></h1>
         <form id="login-form">
             <div class="form-group">
                 <label for="email"><i class="fas fa-envelope"></i> Email:</label>
