--- a/login.html
+++ b/login.html
@@ -101,7 +101,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h1></h1>
+        <h1>login</h1>
         <form id="login-form">
             <div class="form-group">
                 <label for="email"><i class="fas fa-envelope"></i> Email:</label>
