--- a/usuarios.html
+++ b/usuarios.html
@@ -254,7 +254,7 @@
             // Lógica de logout
             logoutButton.addEventListener('click', () => {
                 localStorage.removeItem('authToken');
-                window.location.href = '/login.html';
+                window.location.href = '/meu-repositorio/login.html';
             });
 
             // Função para buscar e exibir os usuários
