--- a/usuarios.html
+++ b/usuarios.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel Admin - Gerenciar Usuários</title>
-    <base href="/meu-repositorio/"> 
+    <base href="/meu-repositorio/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
@@ -18,6 +19,7 @@
             padding: 20px;
             box-sizing: border-box;
         }
+
         .header {
             width: 100%;
             max-width: 1000px;
@@ -28,18 +30,24 @@
             margin-bottom: 30px;
             border-bottom: 1px solid #e0e0e0;
         }
+
         .header h1 {
             color: #333;
             margin: 0;
             font-size: 2em;
         }
+
         .nav-buttons {
             display: flex;
             gap: 10px;
-            flex-wrap: wrap; /* Permite que os botões quebrem a linha em telas menores */
-            justify-content: center; /* Centraliza os botões */
+            flex-wrap: wrap;
+            /* Permite que os botões quebrem a linha em telas menores */
+            justify-content: center;
+            /* Centraliza os botões */
         }
-        .nav-button, .logout-button {
+
+        .nav-button,
+        .logout-button {
             background-color: #007bff;
             color: white;
             padding: 10px 15px;
@@ -54,16 +62,20 @@
             align-items: center;
             gap: 5px;
         }
+
         .nav-button:hover {
             background-color: #0056b3;
             transform: translateY(-2px);
         }
+
         .logout-button {
             background-color: #dc3545;
         }
+
         .logout-button:hover {
             background-color: #c82333;
         }
+
         .container {
             background-color: #fff;
             border-radius: 12px;
@@ -73,22 +85,27 @@
             max-width: 1000px;
             box-sizing: border-box;
         }
+
         .container h2 {
             text-align: center;
             color: #333;
             margin-bottom: 25px;
             font-size: 1.8em;
         }
+
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
         }
-        th, td {
+
+        th,
+        td {
             padding: 12px 15px;
             text-align: left;
             border-bottom: 1px solid #ddd;
         }
+
         th {
             background-color: #f8f9fa;
             color: #333;
@@ -96,9 +113,11 @@
             text-transform: uppercase;
             font-size: 0.9em;
         }
+
         tr:hover {
             background-color: #f1f1f1;
         }
+
         .delete-button {
             background-color: #dc3545;
             color: white;
@@ -109,9 +128,11 @@
             font-size: 0.9em;
             transition: background-color 0.3s ease;
         }
+
         .delete-button:hover {
             background-color: #c82333;
         }
+
         .message {
             margin-top: 20px;
             padding: 10px 20px;
@@ -119,11 +140,13 @@
             font-size: 1.1em;
             text-align: center;
         }
+
         .message.error {
             color: #721c24;
             background-color: #f8d7da;
             border-color: #f5c6cb;
         }
+
         .message.success {
             color: #155724;
             background-color: #d4edda;
@@ -136,30 +159,43 @@
                 flex-direction: column;
                 text-align: center;
             }
+
             .header h1 {
                 margin-bottom: 15px;
             }
+
             .nav-buttons {
                 flex-direction: column;
                 width: 100%;
             }
-            .nav-button, .logout-button {
+
+            .nav-button,
+            .logout-button {
                 width: 100%;
                 justify-content: center;
             }
-            table, thead, tbody, th, td, tr {
+
+            table,
+            thead,
+            tbody,
+            th,
+            td,
+            tr {
                 display: block;
             }
+
             thead tr {
                 position: absolute;
                 top: -9999px;
                 left: -9999px;
             }
+
             tr {
                 border: 1px solid #ccc;
                 margin-bottom: 10px;
                 border-radius: 8px;
             }
+
             td {
                 border: none;
                 border-bottom: 1px solid #eee;
@@ -167,6 +203,7 @@
                 padding-left: 50%;
                 text-align: right;
             }
+
             td:before {
                 position: absolute;
                 top: 6px;
@@ -177,13 +214,26 @@
                 text-align: left;
                 font-weight: bold;
             }
-            td:nth-of-type(1):before { content: "ID:"; }
-            td:nth-of-type(2):before { content: "Email:"; }
-            td:nth-of-type(3):before { content: "Função:"; }
-            td:nth-of-type(4):before { content: "Ações:"; }
+
+            td:nth-of-type(1):before {
+                content: "ID:";
+            }
+
+            td:nth-of-type(2):before {
+                content: "Email:";
+            }
+
+            td:nth-of-type(3):before {
+                content: "Função:";
+            }
+
+            td:nth-of-type(4):before {
+                content: "Ações:";
+            }
         }
     </style>
 </head>
+
 <body>
     <div class="header">
         <h1>Painel Admin</h1>
@@ -209,12 +259,22 @@
             </thead>
             <tbody>
                 <!-- Usuários serão carregados aqui -->
-                <tr><td colspan="4" style="text-align: center;">Carregando usuários...</td></tr>
+                <tr>
+                    <td colspan="4" style="text-align: center;">Carregando usuários...</td>
+                </tr>
             </tbody>
         </table>
     </div>
 
     <script>
+        const token = localStorage.getItem('token');
+        const userRole = localStorage.getItem('userRole');
+
+        // Se o token não existir ou a função não for de 'admin', redireciona para a página de login
+        if (!token || userRole !== 'admin') {
+            alert('Você não tem permissão para acessar esta página. Por favor, faça o login.');
+            window.location.href = './login.html';
+        }
         document.addEventListener('DOMContentLoaded', () => {
             const logoutButton = document.getElementById('logout-button');
             const usersTableBody = document.querySelector('#users-table tbody');
@@ -317,7 +377,7 @@
                     const userId = deleteButton.dataset.userId;
                     // Substituído confirm() por uma mensagem mais amigável ou modal customizado
                     const userConfirmed = window.confirm('Tem certeza que deseja deletar este usuário?');
-                    
+
                     if (userConfirmed) {
                         const token = localStorage.getItem('authToken');
                         if (!token) {
@@ -362,4 +422,5 @@
         });
     </script>
 </body>
+
 </html>
