--- a/loja.html
+++ b/loja.html
@@ -266,7 +266,369 @@
     </div>
 
     <script>
-        // ... Seu JavaScript será atualizado aqui ...
+      // ... (Seu código JavaScript existente) ...
+
+document.addEventListener('DOMContentLoaded', () => {
+    const logoutButton = document.getElementById('logout-button');
+    const productsContainer = document.getElementById('products-container');
+    const paymentModal = document.getElementById('paymentModal');
+    const paymentCloseButton = document.querySelector('.payment-close-button'); // Renomeado para evitar conflito
+    const paymentForm = document.getElementById('paymentForm');
+    const paymentMessage = document.getElementById('payment-message');
+
+    // --- NOVOS ELEMENTOS DO CARRINHO ---
+    const cartIconContainer = document.getElementById('cart-icon-container');
+    const cartCount = document.getElementById('cart-count');
+    const cartModal = document.getElementById('cartModal');
+    const cartCloseButton = document.querySelector('.cart-close-button');
+    const cartItemsList = document.getElementById('cart-items-list');
+    const cartTotalElement = document.getElementById('cart-total');
+    const checkoutButton = document.getElementById('checkout-button');
+    const emptyCartMessage = document.getElementById('empty-cart-message');
+    // --- FIM DOS NOVOS ELEMENTOS ---
+
+    let selectedProduct = null;
+    let cart = []; // Array para armazenar os itens do carrinho
+    const API_URL = 'https://api-backend-2025.onrender.com';
+
+    // --- FUNÇÕES DE LÓGICA DO CARRINHO ---
+    const saveCart = () => {
+        localStorage.setItem('cart', JSON.stringify(cart));
+    };
+
+    const loadCart = () => {
+        const storedCart = localStorage.getItem('cart');
+        cart = storedCart ? JSON.parse(storedCart) : [];
+        updateCartDisplay();
+    };
+
+    const addToCart = (product) => {
+        const existingItem = cart.find(item => item.id === product.id);
+        if (existingItem) {
+            existingItem.quantity++;
+        } else {
+            cart.push({ ...product, quantity: 1 });
+        }
+        saveCart();
+        updateCartDisplay();
+        alert(`"${product.name}" adicionado ao carrinho!`); // Feedback visual simples
+    };
+
+    const removeFromCart = (productId) => {
+        cart = cart.filter(item => item.id !== productId);
+        saveCart();
+        updateCartDisplay();
+    };
+
+    const updateQuantity = (productId, change) => {
+        const item = cart.find(item => item.id === productId);
+        if (item) {
+            item.quantity += change;
+            if (item.quantity <= 0) {
+                removeFromCart(productId);
+            }
+            saveCart();
+            updateCartDisplay();
+        }
+    };
+
+    const updateCartDisplay = () => {
+        cartCount.textContent = cart.reduce((total, item) => total + item.quantity, 0);
+        cartItemsList.innerHTML = ''; // Limpa a lista antes de renderizar
+        let total = 0;
+
+        if (cart.length === 0) {
+            emptyCartMessage.style.display = 'block';
+            checkoutButton.disabled = true;
+        } else {
+            emptyCartMessage.style.display = 'none';
+            checkoutButton.disabled = false;
+            cart.forEach(item => {
+                const itemTotal = item.price * item.quantity;
+                total += itemTotal;
+                const itemElement = document.createElement('div');
+                itemElement.classList.add('cart-item');
+                itemElement.innerHTML = `
+                    <img src="${item.image_url || 'https://placehold.co/80x80/cccccc/333333?text=Sem+Imagem'}" alt="${item.name}">
+                    <div class="cart-item-details">
+                        <h4>${item.name}</h4>
+                        <p>R$ ${parseFloat(item.price).toFixed(2).replace('.', ',')} cada</p>
+                        <p>Subtotal: R$ ${itemTotal.toFixed(2).replace('.', ',')}</p>
+                    </div>
+                    <div class="cart-item-quantity">
+                        <button data-id="${item.id}" data-change="-1">-</button>
+                        <span>${item.quantity}</span>
+                        <button data-id="${item.id}" data-change="1">+</button>
+                    </div>
+                    <button class="cart-item-remove" data-id="${item.id}">Remover</button>
+                `;
+                cartItemsList.appendChild(itemElement);
+            });
+        }
+        cartTotalElement.textContent = `Total: R$ ${total.toFixed(2).replace('.', ',')}`;
+    };
+    // --- FIM DAS FUNÇÕES DE LÓGICA DO CARRINHO ---
+
+
+    const checkLoginStatus = () => {
+        const token = localStorage.getItem('authToken');
+        if (!token) {
+            window.location.href = 'login.html';
+            return false;
+        }
+        return true;
+    };
+
+    logoutButton.addEventListener('click', () => {
+        localStorage.removeItem('authToken');
+        localStorage.removeItem('cart'); // Limpa o carrinho ao sair
+        window.location.href = 'login.html';
+    });
+
+    const fetchAndDisplayProducts = async () => {
+        productsContainer.innerHTML = '<p class="message">Carregando produtos do servidor...</p>';
+        const token = localStorage.getItem('authToken');
+
+        if (!token) {
+            productsContainer.innerHTML = '<p class="message error">Erro: Você não está logado. Redirecionando para o login...</p>';
+            window.location.href = 'login.html';
+            return;
+        }
+
+        try {
+            const response = await fetch(`${API_URL}/products`, {
+                headers: {
+                    'Authorization': `Bearer ${token}`
+                }
+            });
+
+            if (!response.ok) {
+                const errorData = await response.json();
+                if (response.status === 401 || response.status === 403) {
+                    productsContainer.innerHTML = '<p class="message error">Sua sessão expirou ou o token é inválido. Redirecionando para o login...</p>';
+                    localStorage.removeItem('authToken');
+                    window.location.href = 'login.html';
+                } else {
+                    throw new Error(errorData.error || `HTTP error! status: ${response.status}`);
+                }
+                return;
+            }
+
+            const products = await response.json();
+            productsContainer.innerHTML = '';
+
+            if (products.length > 0) {
+                products.forEach(product => {
+                    const productCard = document.createElement('div');
+                    productCard.classList.add('product-card');
+                    const displayPrice = parseFloat(product.price).toFixed(2).replace('.', ',');
+                    const imageUrl = product.image_url || 'https://placehold.co/300x200/cccccc/333333?text=Sem+Imagem';
+                    productCard.innerHTML = `
+                        <img src="${imageUrl}" alt="${product.name}" onerror="this.onerror=null;this.src='https://placehold.co/300x200/cccccc/333333?text=Sem+Imagem';">
+                        <h3>${product.name}</h3>
+                        <p>${product.description}</p>
+                        <span class="price">R$ ${displayPrice}</span>
+                        <button class="add-to-cart-button" data-product-id="${product.id}">
+                            <i class="fas fa-cart-plus"></i> Adicionar ao Carrinho
+                        </button>
+                    `;
+                    productsContainer.appendChild(productCard);
+                });
+            } else {
+                productsContainer.innerHTML = '<p class="message">Nenhum produto disponível no momento. Adicione produtos no painel de administração.</p>';
+            }
+        } catch (error) {
+            productsContainer.innerHTML = `<p class="message error">Erro ao carregar produtos: ${error.message}. Verifique a conexão com o backend.</p>`;
+        }
+    };
+
+    // --- EVENT LISTENERS MODIFICADOS ---
+    productsContainer.addEventListener('click', (event) => {
+        const addToCartButton = event.target.closest('.add-to-cart-button'); // Botão "Adicionar ao Carrinho"
+        if (addToCartButton) {
+            if (!checkLoginStatus()) {
+                return;
+            }
+            const productId = addToCartButton.dataset.productId;
+            const token = localStorage.getItem('authToken');
+
+            if (!token) {
+                // Isso já é tratado por checkLoginStatus, mas é uma segurança extra
+                return;
+            }
+
+            // Busca o produto completo para adicionar ao carrinho
+            fetch(`${API_URL}/products/${productId}`, {
+                headers: {
+                    'Authorization': `Bearer ${token}`
+                }
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Produto não encontrado no servidor ou acesso negado.');
+                }
+                return response.json();
+            })
+            .then(product => {
+                addToCart(product); // Adiciona o produto ao carrinho
+            })
+            .catch(error => {
+                alert(`Erro ao adicionar produto ao carrinho: ${error.message}`);
+            });
+        }
+    });
+
+    // Event listener para abrir o modal do carrinho
+    cartIconContainer.addEventListener('click', () => {
+        cartModal.style.display = 'flex';
+        updateCartDisplay(); // Garante que o carrinho está atualizado ao abrir
+    });
+
+    // Event listeners para fechar o modal do carrinho
+    cartCloseButton.addEventListener('click', () => {
+        cartModal.style.display = 'none';
+    });
+    window.addEventListener('click', (event) => {
+        if (event.target === cartModal) {
+            cartModal.style.display = 'none';
+        }
+    });
+
+    // Event listener para o modal de pagamento (para o botão "Pagar" dentro dele)
+    paymentCloseButton.addEventListener('click', () => { // Usando o novo nome
+        paymentModal.style.display = 'none';
+    });
+    window.addEventListener('click', (event) => {
+        if (event.target === paymentModal) {
+            paymentModal.style.display = 'none';
+        }
+    });
+
+    // Event listener para o botão "Finalizar Compra" do modal do carrinho
+    checkoutButton.addEventListener('click', () => {
+        if (cart.length === 0) {
+            alert('Seu carrinho está vazio!');
+            return;
+        }
+        cartModal.style.display = 'none'; // Fecha o modal do carrinho
+        paymentModal.style.display = 'flex'; // Abre o modal de pagamento
+        paymentMessage.textContent = ''; // Limpa mensagens anteriores
+        paymentForm.reset();
+        // O `selectedProduct` agora será o carrinho para o pagamento
+        // Ajuste a lógica de pagamento para processar múltiplos itens no backend
+    });
+
+    // Event listener para o formulário de pagamento (enviando o carrinho completo)
+    paymentForm.addEventListener('submit', async (event) => {
+        event.preventDefault();
+        paymentMessage.textContent = 'Processando pagamento...';
+        paymentMessage.className = 'payment-message';
+
+        const cardNumber = document.getElementById('card-number').value;
+        const cardName = document.getElementById('card-name').value;
+        const expiryDate = document.getElementById('expiry-date').value;
+        const cvv = document.getElementById('cvv').value;
+        const simulatedPaymentToken = `tok_${Date.now()}_${Math.random().toString(36).substr(2, 10)}`;
+
+        if (!cardNumber || !cardName || !expiryDate || !cvv) {
+            paymentMessage.textContent = 'Preencha todos os dados do cartão.';
+            paymentMessage.classList.add('error');
+            return;
+        }
+
+        if (cart.length === 0) {
+            paymentMessage.textContent = 'Erro: Carrinho vazio. Adicione produtos antes de pagar.';
+            paymentMessage.classList.add('error');
+            return;
+        }
+
+        try {
+            // Em uma loja robusta real, você enviaria os dados do cartão para um Gateway de Pagamento SEGURO.
+            // A resposta desse gateway seria um token que você enviaria para seu backend.
+            // Aqui estamos simulando um token diretamente.
+            const isGatewaySuccess = true;
+            if (!isGatewaySuccess) { // Isso sempre será true no seu código atual, mas é a lógica para um erro
+                paymentMessage.textContent = 'Falha na comunicação com o gateway de pagamento. Tente novamente.';
+                paymentMessage.classList.add('error');
+                return;
+            }
+
+            const token = localStorage.getItem('authToken');
+            if (!token) {
+                paymentMessage.textContent = 'Erro: Você não está logado. Faça login para comprar.';
+                paymentMessage.classList.add('error');
+                window.location.href = 'login.html';
+                return;
+            }
+
+            // O payload agora deve enviar o carrinho completo ou os IDs dos produtos e quantidades
+            const payload = {
+                items: cart.map(item => ({
+                    productId: item.id,
+                    quantity: item.quantity,
+                    price: item.price // É bom enviar o preço para validação no backend
+                })),
+                paymentToken: simulatedPaymentToken,
+                cardNumber: cardNumber,
+                expiryDate: expiryDate,
+                cvv: cvv
+            };
+
+            const response = await fetch(`${API_URL}/process-payment`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Authorization': `Bearer ${token}`
+                },
+                body: JSON.stringify(payload)
+            });
+
+            const data = await response.json();
+
+            if (response.ok) {
+                const totalCartPrice = cart.reduce((sum, item) => sum + (item.price * item.quantity), 0);
+                paymentMessage.textContent = `Pagamento de R$ ${totalCartPrice.toFixed(2).replace('.', ',')} aprovado!`;
+                paymentMessage.classList.add('success');
+                cart = []; // Esvazia o carrinho após o pagamento
+                saveCart(); // Salva o carrinho vazio
+                updateCartDisplay(); // Atualiza o display do carrinho
+
+                setTimeout(() => {
+                    paymentModal.style.display = 'none';
+                    paymentForm.reset();
+                    fetchAndDisplayProducts(); // Opcional: recarregar produtos para atualizar estoque se backend suportar
+                }, 3000);
+            } else {
+                paymentMessage.textContent = `Erro no pagamento: ${data.error || 'Falha na confirmação.'}`;
+                paymentMessage.classList.add('error');
+            }
+        } catch (error) {
+            paymentMessage.textContent = 'Ocorreu um erro inesperado ao processar o pagamento.';
+            paymentMessage.classList.add('error');
+        }
+    });
+
+    // Event listener para os botões de quantidade e remover dentro do modal do carrinho
+    cartItemsList.addEventListener('click', (event) => {
+        const target = event.target;
+        const productId = target.dataset.id;
+
+        if (target.tagName === 'BUTTON') {
+            if (target.dataset.change) {
+                updateQuantity(productId, parseInt(target.dataset.change));
+            } else if (target.classList.contains('cart-item-remove')) {
+                removeFromCart(productId);
+            }
+        }
+    });
+
+
+    // --- INICIALIZAÇÃO ---
+    if (checkLoginStatus()) {
+        fetchAndDisplayProducts();
+        loadCart(); // Carrega o carrinho ao iniciar
+    }
+});
     </script>
 </body>
 </html>
