--- a/loja.html
+++ b/loja.html
@@ -7,9 +7,7 @@
     <base href="/meu-repositorio/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* ... Seu CSS existente ... */
-
-        /* Estilos adicionais para o carrinho */
+        <link rel="stylesheet" href="css/style.css">
         .header .cart-icon-container {
             position: relative;
             cursor: pointer;
