--- a/loja.html
+++ b/loja.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Loja Virtual</title>
-    <base href="/meu-repositorio/"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css"> </head>
+    <base href="/meu-repositorio/">
+    <link rel="stylesheet" href="styleloja.css"> 
+</head>
 <body>
     <div class="header">
         <h1>Bem-vindo à Loja Virtual!</h1>
