--- a/loja.html
+++ b/loja.html
@@ -72,5 +72,6 @@
         </div>
     </div>
 
-    <script src="js/script.js"></script> </body>
+    <script src="script.js"></script>
+ </body>
 </html>
