--- a/loja.html
+++ b/loja.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Loja Virtual</title>
-    <base href="/meu-repositorio/">
+    <base href="/meu-repositorio/"> 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
     <link rel="stylesheet" href="styleloja.css"> 
-</head>
+    </head>
 <body>
     <div class="header">
         <h1>Bem-vindo à Loja Virtual!</h1>
@@ -72,6 +75,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
- </body>
+    <script src="scripts.js"></script> 
+
+</body>
 </html>
