--- a/frontend/loja.html
+++ b/frontend/loja.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Loja Virtual</title>
-    <base href="/meu-repositorio/"> 
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
-    <link rel="stylesheet" href="styleloja.css"> 
-    </head>
+    <link rel="stylesheet" href="css/style.css"> 
+</head>
 <body>
     <div class="header">
         <h1>Bem-vindo à Loja Virtual!</h1>
         <div class="header-actions">
-            <div class="cart-icon-container" id="cart-icon-container">
+            <a href="admin.html" class="admin-button">Admin</a> <div class="cart-icon-container" id="cart-icon-container">
                 <i class="fas fa-shopping-cart"></i>
                 <span class="cart-count" id="cart-count">0</span>
             </div>
@@ -23,7 +21,7 @@
     </div>
 
     <div id="products-container" class="products-container">
-        <p class="message">Carregando produtos...</p>
+        <p class="message info">Carregando produtos...</p>
     </div>
 
     <div id="cartModal" class="modal cart-modal">
@@ -70,12 +68,11 @@
                     </div>
                 </div>
                 <button type="submit" class="pay-button">Pagar</button>
-                <p id="payment-message" class="payment-message"></p>
+                <p id="payment-message" class="message"></p>
             </form>
         </div>
     </div>
 
-    <script src="scripts.js"></script> 
-
+    <script src="js/script.js"></script> 
 </body>
 </html>
