--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Minha Loja Virtual</title>
-    <link rel="stylesheet" href="css/style.css"> </head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
     <div class="auth-container">
         <h2>Criar Nova Conta</h2>
@@ -28,7 +29,6 @@
             Já tem uma conta? <a href="login.html">Faça login aqui</a>
         </div>
     </div>
-
     <script src="js/auth.js"></script>
 </body>
 </html>
