--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Minha Loja Virtual</title>
+    <!-- Caminho relativo para GitHub Pages -->
     <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
@@ -29,6 +30,7 @@
             Já tem uma conta? <a href="login.html">Faça login aqui</a>
         </div>
     </div>
+    <!-- O script de autenticação para esta página -->
     <script src="js/auth.js"></script> 
 </body>
 </html>
