--- a/login.html
+++ b/login.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Minha Loja Virtual</title>
-    <link rel="stylesheet" href="css/style.css"> </head>
+    <!-- Caminho relativo para GitHub Pages -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
     <div class="auth-container">
-        <h2>Entrar na Loja</h2>
+        <h2>Login</h2>
         <form id="loginForm">
             <div class="form-group">
-                <label for="username">Usuário:</label>
-                <input type="text" id="username" name="username" required>
+                <label for="email">Email:</label> <!-- MUDANÇA AQUI: de 'username' para 'email' -->
+                <input type="email" id="email" name="email" required> <!-- MUDANÇA AQUI: de 'username' para 'email' -->
             </div>
             <div class="form-group">
                 <label for="password">Senha:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit" class="form-button">Entrar</button>
+            <button type="submit" class="form-button login">Entrar</button>
             <p id="loginMessage" class="message"></p>
         </form>
         <div class="links">
             Não tem uma conta? <a href="cadastro.html">Cadastre-se aqui</a>
         </div>
     </div>
-
+    <!-- O script de autenticação para esta página -->
     <script src="js/auth.js"></script>
 </body>
 </html>
