--- a/loja.html
+++ b/loja.html
@@ -3,75 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Loja Virtual</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
-    <link rel="stylesheet" href="css/style.css"> 
+    <title>Loja Online - Minha Loja Virtual</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Bem-vindo à Loja Virtual!</h1>
-        <div class="header-actions">
-            <a href="admin.html" class="admin-button">Admin</a> <div class="cart-icon-container" id="cart-icon-container">
-                <i class="fas fa-shopping-cart"></i>
-                <span class="cart-count" id="cart-count">0</span>
+    <header>
+        <h1>Minha Loja Virtual</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="loja.html">Loja</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
+                </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Nossos Produtos</h2>
+        <div id="product-grid" class="product-grid">
             </div>
-            <button id="logout-button" class="logout-button">Sair</button>
-        </div>
-    </div>
+    </main>
 
-    <div id="products-container" class="products-container">
-        <p class="message info">Carregando produtos...</p>
-    </div>
-
-    <div id="cartModal" class="modal cart-modal">
-        <div class="modal-content cart-modal-content">
-            <span class="close-button cart-close-button">&times;</span>
-            <h2>Seu Carrinho</h2>
-            <div id="cart-items-list">
-                </div>
-            <p id="cart-total" class="cart-total">Total: R$ 0,00</p>
-            <button id="checkout-button" class="checkout-button">Finalizar Compra</button>
-            <p id="empty-cart-message" class="empty-cart-message" style="display: none;">Seu carrinho está vazio.</p>
-        </div>
-    </div>
-
-    <div id="paymentModal" class="modal payment-modal">
-        <div class="modal-content payment-modal-content">
-            <span class="close-button payment-close-button">&times;</span>
-            <h2>Finalizar Compra</h2>
-            <p style="color: #dc3545; font-weight: bold; text-align: center;">
-                ATENÇÃO: Este é um formulário de pagamento SIMULADO.
-                Nenhum dado real de cartão será processado ou armazenado.
-                Os dados inseridos aqui são APENAS para fins de teste e demonstração.
-            </p>
-            <form id="paymentForm">
-                <div class="form-group">
-                    <label for="card-number">Número do Cartão (Simulado)</label>
-                    <input type="text" id="card-number" placeholder="XXXX XXXX XXXX XXXX" required
-                        pattern="[0-9]{13,16}" title="Apenas números, 13 a 16 dígitos">
-                </div>
-                <div class="form-group">
-                    <label for="card-name">Nome no Cartão (Simulado)</label>
-                    <input type="text" id="card-name" placeholder="Nome Completo" required>
-                </div>
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="expiry-date">Validade (MM/AA - Simulado)</label>
-                        <input type="text" id="expiry-date" placeholder="MM/AA" required
-                            pattern="(0[1-9]|1[0-2])\/[0-9]{2}" title="Formato MM/AA">
-                    </div>
-                    <div class="form-group">
-                        <label for="cvv">CVV (Simulado)</label>
-                        <input type="text" id="cvv" placeholder="XXX" required pattern="[0-9]{3,4}"
-                            title="3 ou 4 dígitos">
-                    </div>
-                </div>
-                <button type="submit" class="pay-button">Pagar</button>
-                <p id="payment-message" class="message"></p>
-            </form>
-        </div>
-    </div>
+    <footer>
+        <p>&copy; 2025 Minha Loja Virtual. Todos os direitos reservados.</p>
+    </footer>
 
     <script src="js/script.js"></script> 
 </body>
